--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
 @import '~antd/dist/antd.css';
 
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -11,8 +7,10 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  border-bottom: 1px solid black;
+  height: 80px;
+  padding: 8px 0;
+  text-align: center;
 }
 
 .App-header h1 {
@@ -28,7 +26,13 @@
 }
 
 .App-content {
-  padding: 25px 0;
+  background: white;
+  padding: 50px 0;
+}
+
+.App-footer {
+  border-top: 1px solid #ddd;
+  padding: 30px 0;
 }
 
 @keyframes App-logo-spin {
