--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import '~antd/dist/antd.css';
 
+.App {
+  background: white;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -9,7 +13,7 @@
   background-color: #222;
   border-bottom: 1px solid black;
   height: 80px;
-  padding: 8px 0;
+  padding: 10px 0;
   text-align: center;
 }
 
@@ -18,16 +22,12 @@
 }
 
 .App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+  font-size: 1.8em;
 }
 
 .App-content {
   background: white;
-  padding: 50px 0;
+  padding: 60px 25px;
 }
 
 .App-footer {
@@ -35,7 +35,20 @@
   padding: 30px 0;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+/* excuse these "responsive" hacks, they're just for quick aethetics! */
+
+.hidden-mobile {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .fullwidth-mobile {
+    width: 100% !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .hidden-mobile {
+    display: block;
+  }
 }
